[java223] Add a boolean to enable/disable helper lib generation